# clmm-sdk-v2

rust/: Cargo.toml
rust/src/: crema.rs  error.rs  lib.rs
rust/src/math/: clmm_math.rs
rust/src/pair/: simulate_swap.rs
rust/src/state/: tick.rs
