[package]
name = "crema-clmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.30.1"
uint = "0.9.1"
spl-token = { version = ">=5", features = ["no-entrypoint"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.31"
anyhow = "1.0"
serde_json = "1.0.82"
serde = "1.0.140"
lazy_static = "1.2.0"
rust_decimal = { version = ">=1.26.1", features = ["maths"] }
solana-sdk = "2"
solana-client = "2"
solana-program = "2"
# jupiter = { path = "./jupiter" }
borsh = { version = "0.10", features = ["const-generics"] }
sha2 = "0.10.2"

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
spl-token-swap = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "5ee81566b7333810f68e736065c83fa5b8b81fa6" }
